# easyaiot

./:  README_en.md  .gitattributes  .gitignore  LICENSE  README.md  README_en.md  README_fr.md  README_ja.md  README_ko.md  README_ru.md  README_zh.md  README_zh_tw.md  create_docker_service.sh  pom.xml  start_docker.sh
.doc/宣传文章/: README.md  enrich_docx.py  process_docx.py  项目宣传1.md  项目宣传2.md
.doc/部署文档/: 平台Windows部署文档.md  平台Windows部署文档_fr.md  平台Windows部署文档_ko.md  平台Windows部署文档_ru.md  平台Windows部署文档_zh.md  平台Windows部署文档_zh_tw.md  平台部署文档.md  平台部署文档_fr.md  平台部署文档_ko.md  平台部署文档_ru.md  平台部署文档_zh.md  平台部署文档_zh_tw.md
.image/: logo
.scripts/: init.sh
.scripts/docker/: NETWORK_FIX.md  POSTGRESQL_AUTO_FIX.md  POSTGRESQL_PERMISSION_FIX.md  POSTGRESQL_PORT_CONFLICT.md  Readme.md  apply_postgresql_max_connections.sh  detect_docker_data_root.sh  diagnose_filesystem.sh  docker-compose.yml  fix_network.sh  fix_postgresql_permissions.sh  fix_postgresql_port_conflict.sh  init-databases.sh  init-tdengine.sh  install.sh  install_all.sh  install_linux.sh  install_linux_arm.sh  install_linux_kylin.sh  install_mac.sh  install_middleware.sh  install_middleware_linux.sh  install_middleware_mac.sh  install_middleware_win.ps1  install_module.sh  install_win.ps1  postgresql-entrypoint.sh  restart_postgresql.sh  set_permanent_token.sh  srs-entrypoint.sh  start_services.sh  switch_docker_data_root.sh  tdengine-entrypoint.sh  test_postgresql_connection.sh  upload_minio_data.sh  verify_services.sh
.scripts/harbor/: docker-compose.yml  manage.sh
.scripts/mysql/: docker-compose.yml  (+1 more)
AI/: .env  .env.arch  .env.backup  .env.docker  .env.prod  =3.0.0  AUTO_LABEL_README.md  Dockerfile  README.md  README_en.md  add_service_type_column.py  app.py  application.yml  check_yolo_version.py  config.py  db_models.py  docker-compose.yaml  drop_all_tables.py  drop_import_tables.py  env.example  install.sh  install_linux.sh  install_linux_arm.sh  install_linux_kylin.sh  install_win.ps1  models.py  requirements.txt  run.py  test_model_training_inference.py  test_service.py  tmpibnnzzml
DEVICE/: .dockerignore  Dockerfile  Dockerfile.base  README.md  build-cache.sh  docker-compose.yml  import_tables.py  install.sh  install_linux.sh  install_mac.sh  install_win.ps1
TASK/: CMakeLists.txt
TASK/3rdpart/openssl/: configuration.h  opensslv.h
TASK/3rdpart/paho/: MQTTAsync.h  MQTTClient.h  MQTTExportDeclarations.h
TASK/config/: system_config.json
TASK/config/ai_models/: yolov8n_person_detection.json
TASK/config/cameras/: camera_entrance.json
TASK/config/zones/: entrance_zone.json
TASK/include/: AlertManager.h  BehaviorAnalyzer.h  CameraStreamer.h  ConfigurationManager.h  FileUtils.h  IMessageSender.h  IStorageService.h  InferenceEngine.h  LocalStorage.h  Logger.h  MQTTClient.h  MQTTMessageSender.h  MinIOClient.h  MinIOStorageService.h  ModelDownloader.h  ModelManager.h  ObjectTracker.h  PersonDetector.h  RTSPCamera.h  ServiceLocator.h  SystemSupervisor.h  ThreadPool.h  TimeUtils.h  USBCamera.h  VehicleDetector.h  VideoStorage.h
TASK/include/processing/: FrameProcessor.h  RegionDetector.h
TASK/scripts/: build_system.sh  setup_environment.sh
TASK/src/: Config.cpp  Config.h  Datatype.h  Detech.cpp  Detech.h  Draw.cpp  Draw.h  Manage.cpp  Postprocess.h  Preprocess.cpp  Yolov11Engine.cpp  Yolov11Engine.h  Yolov11ThreadPool.cpp  Yolov11ThreadPool.h  config.cpp  config.h  detech.cpp  detech.h  main.cpp  manage.cpp  manage.h  postprocess.cpp  preprocess.h  yolov11_engine.cpp  yolov11_engine.h  yolov11_thread_pool.cpp  yolov11_thread_pool.h  yolov8_multiple_camera.cpp  yolov8_single_camera.cpp
TASK/src/ai/: InferenceEngine.cpp  ModelDownloader.cpp  ModelManager.cpp
TASK/src/ai/detectors/: PersonDetector.cpp  VehicleDetector.cpp
TASK/src/alert/: AlertManager.cpp  MQTTClient.cpp
TASK/src/cameras/: CameraStreamer.cpp  RTSPCamera.cpp  USBCamera.cpp
TASK/src/core/: ConfigurationManager.cpp  ServiceLocator.cpp  SystemSupervisor.cpp  ThreadPool.cpp
TASK/src/draw/: cv_draw.cpp  cv_draw.h
TASK/src/engine/: engine.h  rknn_engine.cpp  rknn_engine.h
TASK/src/process/: postprocess.h  preprocess.cpp  preprocess.h
TASK/src/processing/: BehaviorAnalyzer.cpp  FrameProcessor.cpp  ObjectTracker.cpp  RegionDetector.cpp
TASK/src/rkmedia/utils/: mpp_decoder.cpp  mpp_decoder.h  mpp_encoder.cpp
TASK/src/storage/: LocalStorage.cpp  MinIOClient.cpp  MinIOStorageService.cpp  VideoStorage.cpp
TASK/src/task/: yolov8_engine.cpp  yolov8_engine.h  yolov8_thread_pool.cpp  yolov8_thread_pool.h
TASK/src/types/: datatype.h
TASK/src/utils/: FileUtils.cpp  Logger.cpp  TimeUtils.cpp  engine_helper.h
VIDEO/: .env  .env.docker  .env.prod  Dockerfile  KAFKA_SOCKET_DISCONNECTED_FIX.md  README.md  RTMP_TROUBLESHOOTING.md  cleanup_orphaned_processes.py  configure_qwenvl3_api_key.py  debug_stream_forward_tasks.py  diagnose_rtmp_issue.py  diagnose_snapshot_alert_flow.py  docker-compose.yaml  drop_all_tables.py  drop_import_tables.py  env.example  fix_kafka_consumer_group.py  fix_kafka_consumer_group.sh  fix_kafka_consumer_group_README.md  fix_kafka_quick.sh  fix_postgresql_pg_hba.service  fix_postgresql_pg_hba.sh  fix_postgresql_pg_hba_AUTO_START_README.md  fix_postgresql_pg_hba_README.md  fix_postgresql_pg_hba_auto.sh  install.sh  install_fix_postgresql_service.sh  install_linux.sh  install_linux_arm.sh  install_linux_kylin.sh  install_win.ps1  kill_all_realtime_processes.py  kill_all_realtime_processes_README.md  mock_callback_server.py  models.py  requirements.txt  run.py  test_alert_notification.py  test_alert_notification_README.md  test_callback.py  (+12 more)
WEB/: .env  .env.development  .env.development.bak  Dockerfile  README.md  README_en.md  diagnose_video_service.sh  docker-compose.yaml  install.sh  install_linux.sh  install_win.ps1  package.json  pnpm-lock.yaml
env-support/: docker-compose.yml
iot-common/: pom.xml
iot-device/: pom.xml
iot-gateway/: pom.xml
iot-infra/: pom.xml
iot-parent/: .flattened-pom.xml  pom.xml
iot-stream/: pom.xml
iot-system/: pom.xml
iot-things/: pom.xml
iot-web/: package.json
(+1188 files in other folders)
